--- a/blog.html
+++ b/blog.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Página de blog</h1>
     <h2>Post número 1</h2>
+    <h2>Post número 2</h2>
     <a href="index.html"> Voltar para a página inicial</a>
 </body>
 </html>
